Overflow fix

--- a/mobiflex.css
+++ b/mobiflex.css
@@ -10,6 +10,7 @@ html.mf-iscroll {
 
 body {
     margin: 0;
+    overflow-x: hidden;
 }
 
 /* load states */
